src/test/deca/library/invalid/result/difference_matrice_taille_different_output.res
Test soustraction tableau 2D
Soustraction entre un tableau de int rempli de 5 et un tableau de float rempli de 6.0
Les deux matrices doivent être de la même taille pour la soustraction
Erreur de dimension
